@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-03T08:08:54Z",
+  "timestamp" : "2022-10-03T16:12:55Z",
   "count_outdated" : 81,
   "uniques_outdated" : 68,
-  "count" : 88,
-  "uniques" : 75,
+  "count" : 89,
+  "uniques" : 76,
   "clones" : [
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
