@@ -1,3 +1,11 @@
+2022-10-03T16:12:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3175694599
+* notice: last 14d: unq all: 3 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 68 81 / 75 88
+* notice: next accum: outdated-unq outdated-all / unq all: 68 81 / 76 89
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-03]
+
 2022-10-03T08:08:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172568582
 * notice: last 14d: unq all: 2 7
